test/should-pass/fail/illegal-klass-exception/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass incorrect-example {
  superklass object;
  klass      object;
}
int-t main() {
  return 0;
}
